# Checker

./: CMakeLists.txt
src/: main.cpp  raygui.cpp
src/ai/: ai.cpp  ai.h
src/beatings/: beatings.cpp  beatings.h
src/board/: board.cpp  board.h
src/game/: game.cpp  game.h
src/pawn/: pawn.cpp  pawn.h
src/ui/: ui.cpp  ui.h
src/utils/: utils.h
